--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
+    "license":"MIT",
     "scripts": {
-        "test:node": "autocannon -d 60 -c 100 http://localhost:3000/api/v1/data",
-        "test:go": "autocannon -d 60 -c 100 http://localhost:5000/api/v1/data"
+        "test:node:json": "autocannon -d 30 -c 100 http://localhost:3000/api/v1/health",
+        "test:node:db": "autocannon -d 30 -c 100 http://localhost:3000/api/v1/music",
+        "test:node": "yarn test:node:json && yarn test:node:db",
+        "test:go": "autocannon -d 30 -c 100 http://localhost:5000/api/v1/data",
+        "test": "yarn test:node && yarn test:go"
     },
     "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
     "devDependencies": {
