complete crud golang and nodejs

--- a/api-go/package.json
+++ b/api-go/package.json
@@ -1,6 +1,8 @@
 {
   "license":"MIT",
   "scripts": {
-    "migrate": "migrate -path ./migrations -database \"postgres://go_user:go_password@localhost:5433/api_go?sslmode=disable\" up"
+    "migrate": "migrate -path ./migrations -database \"postgres://go_user:go_password@localhost:5433/api_go?sslmode=disable\" up",
+    "generate": "sqlc generate",
+    "dev": "air"
   }
 }
