--- a/api-node/package.json
+++ b/api-node/package.json
@@ -12,7 +12,9 @@
     "@libsql/client": "^0.15.8",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
+    "hash-wasm": "^4.12.0",
     "hono": "^4.7.11",
+    "jose": "^6.0.11",
     "pg": "^8.16.0"
   },
   "devDependencies": {
