--- a/api-go/package.json
+++ b/api-go/package.json
@@ -1,8 +1,20 @@
 {
-  "license":"MIT",
+  "license": "MIT",
+  "type": "module",
   "scripts": {
-    "migrate": "migrate -path ./migrations -database \"postgres://go_user:go_password@localhost:5433/api_go?sslmode=disable\" up",
-    "generate": "sqlc generate",
+    "drizzle:migrate": "drizzle-kit migrate",
+    "drizzle:generate": "drizzle-kit generate",
+    "drizzle:studio": "drizzle-kit studio",
+    "sqlc:generate": "sqlc generate",
     "dev": "air"
+  },
+  "dependencies": {
+    "drizzle-orm": "^0.44.2",
+    "pg": "^8.16.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.15.30",
+    "@types/pg": "^8.15.4",
+    "drizzle-kit": "^0.31.1"
   }
 }
