--- a/api-node/package.json
+++ b/api-node/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.14.3",
+    "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "hash-wasm": "^4.12.0",
