--- a/api-node/package.json
+++ b/api-node/package.json
@@ -3,13 +3,12 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "start": "tsx dist/index.js",
+    "dev": "tsx watch src/main.ts",
     "drizzle:migrate": "drizzle-kit migrate",
     "drizzle:generate": "drizzle-kit generate",
     "drizzle:studio": "drizzle-kit studio --port=4001",
-    "db:drop": "tsx ./db/drop.ts",
-    "db:seed": "tsx ./db/seeder.ts"
+    "db:drop": "tsx ./src/db/drop.ts",
+    "db:seed": "tsx ./src/db/seeder.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.3",
